--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,12 @@ header {
   overflow: hidden;
 }
 
+#newForm{
+  text-align: center;
+  font-size: 50px;
+  padding-bottom: 200px;
+}
+
 header video {
   position: absolute;
   top: 50%;
@@ -128,10 +134,6 @@ header .overlay {
   height: 200px;
 }
 
-#submit {
-  margin-bottom: 250px;
-}
-
 #copyright {
   color: aliceblue;
   text-align: center;
@@ -168,12 +170,22 @@ header .overlay {
   text-decoration: none;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1080px) {
   #navbar {
     width: 100%;
     background-color: #343a40 !important;
   }
   #rowContainer {
     padding-top: 15px;
+  } 
+  .img-fluid{
+    padding: 20px;
   }
+  #submit{
+    margin-bottom: 0px;
+  }
+  p{
+    text-align: center;
+  }
+
 }
