adding new styling to port

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,9 @@ header .overlay {
 
 #rowContainer {
   padding-top: 15px;
+  width: 16rem;
 }
+
 
 #aboutme {
   page-break-after: auto;
@@ -170,14 +172,11 @@ header .overlay {
   text-decoration: none;
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 1000px) {
   #navbar {
     width: 100%;
     background-color: #343a40 !important;
   }
-  #rowContainer {
-    padding-top: 15px;
-  } 
   .img-fluid{
     padding: 20px;
   }
